[package]
name = "ngtcp2-rs"
version = "0.1.0"
description = "Safe Rust bindings for ngtcp2"
edition = "2024"
repository = "https://github.com/redbaron/ngtcp2-rs"

[dependencies]
ngtcp2-sys = { path = "ngtcp2-sys" }
socket2 = "0.5.8"
bitflags = "2.9.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
